@@ -4,6 +4,8 @@ Changelog
 1.1 (UNRELEASED)
 ----------------
 
+- Fixed Facebook login response as JSON
+  [tiberiuichim]
 - Facebook Login with JavaScript SDK v2.1
   [petschki]
 - add Facebook Login Viewlet
